<?xml version="1.0"?>
<package>
  <name>csce574hw2</name>
  <version>0.0.0</version>
  <description>The csce574hw2 package</description>
  <maintainer email="connerlr@email.sc.edu">conner</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>

  </export>
</package>
